Fixed: Increase width and truncate long titles on Import List Exclusions
Closes #6779

(cherry picked from commit 2d0541c03b761a0ec5e10711d6bd577e07141517)

--- a/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusion.css
+++ b/frontend/src/Settings/ImportLists/ImportListExclusions/ImportListExclusion.css
@@ -8,12 +8,14 @@
 }
 
 .movieTitle {
-  flex: 0 0 400px;
+  @add-mixin truncate;
+
+  flex: 0 0 600px;
 }
 
 .tmdbId,
 .movieYear {
-  flex: 0 0 200px;
+  flex: 0 0 70px;
 }
 
 .actions {
